--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="format-detection" content="telephone=no">
     <title>运图要买车</title>
+    <script>
+      let _hmt = _hmt || [];
+      (function() {
+        let hm = document.createElementment("script");
+        hm.src = "https://hm.baidu.com/hm.js?a5cc9e659c8d2d3d65bc2021775d3d7d"
+        let s =document.getElementsBytsByTagName("script")[0]
+        s.parentNode.insertBefore(hm, s)
+      })();
+    </script>
   </head>
   <body>
     <div id="app"></div>
